# src/routes/management.routes.ts
@@ -2,8 +2,6 @@ import { Router } from 'express';
 import {
   createManagement,
   updateManagement,
-  addKeywordsToManagement,
-  deleteKeywordsFromManagement,
   getManagements,
   getManagementById,
   deleteManagement,
@@ -11,33 +9,27 @@ import {
   deleteFilesFromManagement,
   getManagementsPaginated,
 } from '../controllers/management.controller';
-import multer from "multer";
-import path from "path";
+import multer from 'multer';
+import path from 'path';
 
 const router = Router();
 
 const storage = multer.diskStorage({
   destination: (req, file, cb) => {
-    cb(null, "uploads/management/");
+    cb(null, 'uploads/management/');
   },
   filename: (req, file, cb) => {
-    const uniqueSuffix = Date.now() + "-" + Math.round(Math.random() * 1e9);
+    const uniqueSuffix = Date.now() + '-' + Math.round(Math.random() * 1e9);
     cb(null, uniqueSuffix + path.extname(file.originalname));
-  }
+  },
 });
 const upload = multer({ storage });
 
 // Route to create a new management entry
-router.post('/', upload.array("file", 5), createManagement);
+router.post('/', upload.array('file', 5), createManagement);
 
 // Route to update an existing management entry
 router.put('/:id', updateManagement);
-
-// Route to add keywords to an existing management entry
-router.put('/addKeywords/:id', addKeywordsToManagement);
-
-// Route to delete keywords from an existing management entry
-router.put('/deleteKeywords/:id', deleteKeywordsFromManagement);
 
 // Route to get all management entries
 router.get('/', getManagements);
@@ -49,7 +41,7 @@ router.get('/:id', getManagementById);
 router.delete('/:id', deleteManagement);
 
 // Route to add files to an existing management entry
-router.put('/addFile/:id', upload.array("file", 5), addFileToManagement);
+router.put('/addFile/:id', upload.array('file', 5), addFileToManagement);
 
 // Route to delete a file from an existing management entry
 router.put('/deleteFile/:id', deleteFilesFromManagement);
